[project]
name = "tennetctl"
version = "0.0.0"
requires-python = ">=3.13"
# Monitoring deps added in Phase 13 Plan 01.
# Kept as list here for documentation; existing venv was populated via direct pip install.
dependencies = [
  "nats-py>=2.9,<3.0",
  "opentelemetry-proto>=1.28,<2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["backend"]
