[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tennetctl"
version = "0.1.0"
description = "Unified Python SDK for the TennetCTL platform — auth, flags, iam, audit, notify, metrics, logs, traces, vault, catalog."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "TennetCTL" }]
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["tennetctl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["tennetctl"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
