[project]
name = "tennetctl"
version = "0.2.0"
description = "Python SDK for TennetCTL — feature flag evaluation and more."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
authors = [{ name = "TennetCTL" }]
dependencies = ["httpx>=0.25"]

[project.urls]
Homepage = "https://github.com/tennetctl/tennetctl"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tennetctl*"]
