[project]
name = "k-forensics-backend"
version = "0.0.1"
description = "k-forensics backend — gateway proxy + forensics APIs"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "qdrant-client>=1.12.0",
    "asyncpg>=0.31.0",
    "valkey>=6.1.1",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
